# aiops_e2e

./: .env  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  behave.ini  pyproject.toml
.github/: CODEOWNERS
analysis/: analyzer.py  main.py  model.py
analysis/agents/datadog_agent/: agent.py  context_injector.py  log_extractor.py  main.py  tools.py
analysis/agents/datadog_agent/domain_knowledge/000_Onboard/: microservices.txt
analysis/agents/datadog_agent/domain_knowledge/000_Onboard/OFFBOARD/: context.md  offboard.csv
analysis/agents/datadog_agent/domain_knowledge/000_Onboard/ONBOARD/: context.md  onboard.csv
analysis/agents/datadog_agent/domain_knowledge/100_ElephantFlows/: microservices.txt
analysis/agents/datadog_agent/domain_knowledge/100_ElephantFlows/ELEPHANTFLOW_ENHANCED/successful_runs/: elephant_flow_enhanced_firing_alert.csv  elephant_flow_enhanced_resolved_alert.csv
analysis/agents/datadog_agent/domain_knowledge/100_ElephantFlows/ELEPHANTFLOW_LEGACY/successful_runs/: elephant_flow_legacy_firing_alert.csv  elephant_flow_legacy_resolved_alert.csv
analysis/agents/jenkins_agent/: agent.py  log_parser.py  tools.py
analysis/data_proccesor/: data_processor.py
analysis/graphs/: analyzer_graph.py  orchestrator_graph.py
analysis/utils/: utils.py
features/: 000_Onboard.feature  100_ElephantFlows.feature  110_ElephantFlows_HA.feature  120_ElephantFlows_Cluster.feature  200_Correlation.feature  210_Correlation_HA.feature  220_Correlation_Cluster.feature  300_RAVPN.feature  400_Anomaly.feature  500_AnomalyDetection.feature  600_CapacityAnalytics_LinaCPU.feature  601_CapacityAnalytics_LinaMemory.feature  602_CapacityAnalytics_SnortCPU.feature  603_CapacityAnalytics_SnortMemory.feature  604_CapacityAnalytics_RAVPN.feature  environment.py  model.py
features/llm/: helios.py
features/resources/: scenario_prerequisites.json
features/resources/elephant_flow/: enhanced_flows.json  legacy_flows.json
features/steps/: anomaly.py  cdo_apis.py  common_steps.py  correlation.py  elephant_flow.py  env.py  metrics.py  onboard.py  ra_vpn.py  test_series_generator_test.ipynb  time_series_generator.py  utils.py
notebooks/: test_series_generator_test.ipynb
scripts/: README_BACKFILL.md  README_PUSH_LIVE.md  README_TEST_SCENARIOS.md  backfill.py  ftd_metrics_remote_write_disable.py  push_live_metrics.py  test_historical_scenarios.py
shared/: label_utils.py  step_utils.py
utils/: backfill.sh  download_mimirtool.sh  download_prometheus.sh  historical_data.txt
