[tool.poetry]
name = "aiops_e2e"
version = "0.1.0"
description = "E2E tests for AIOps"
authors = ["Harish Balakrishnan <harishbalakrishnan3@gmail.com>"]
readme = "README.md"

# Specify your package directory here if your source code is inside a folder.
# Uncomment and edit if needed:
# packages = [
#     { include = "your_package_name" }
# ]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PyHamcrest = "^2.1.0"
PyYaml = "^6.0.2"
behave = "^1.2.6"
mockseries = "^0.3.1"
opentelemetry-api = "^1.28.2"
opentelemetry-sdk = "^1.28.2"
opentelemetry-instrumentation = "^0.49b2"
opentelemetry-instrumentation-openai = "^0.33.1"
opentelemetry-exporter-prometheus-remote-write = "^0.49b2"
opentelemetry-semantic-conventions = "^0.49b2"
opentelemetry-semantic-conventions-ai = "^0.4.1"
pydantic = "^2.8.2"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
regex = "^2024.9.11"
python-dateutil = "^2.9.0.post0"
pyjwt = "^2.9.0"
urllib3 = ">=1.25.4,<1.27"
pandas = "^2.2.2"
jinja2 = "^3.1.4"
langchain = "^0.3.26"
langchain-aws = "^0.2.29"
langgraph = "^0.5.4"
isort = "^6.0.1"
datadog-api-client = "^2.40.0"
langchain-core = "^0.3.72"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.1.0"
notebook = "^7.3.2"
plotly = "^6.0.0"


[tool.black]
line-length = 88
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
