[tool.poetry]
name = "aiops_e2e"
version = "0.1.0"
description = "E2E tests for AIOps"
authors = ["Harish Balakrishnan <harishbalakrishnan3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
PyHamcrest = "^2.1.0"
PyYaml = "^6.0.2"
behave = "^1.2.6"
darts = "^0.32.0"
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
opentelemetry-instrumentation = "^0.51b0"
opentelemetry-instrumentation-openai = "^0.36.0"
opentelemetry-exporter-prometheus-remote-write = "^0.51b0"
opentelemetry-semantic-conventions = "^0.51b0"
opentelemetry-semantic-conventions-ai = "^0.4.1"
pydantic = "^2.10.0"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
regex = "^2024.11.6"
python-dateutil = "^2.9.0.post0"
pyjwt = "^2.10.0"
urllib3 = "^2.3.0"
pandas = "^2.2.3"
jinja2 = "^3.1.5"
langchain = "^0.3.26"
langchain-aws = "^0.2.29"
langgraph = "^0.5.4"
isort = "^6.0.1"
datadog-api-client = "^2.40.0"
langchain-core = "^0.3.72"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"
notebook = "^7.3.3"
plotly = "^6.0.1"


[tool.black]
line-length = 88
target-version = ['py312']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
